# docs

./: 404.html  README.md  docusaurus.config.js  generate-config.js  generate-docusaurus-config.js  mkdocs.yml  package-lock.json  package.json  prd.md  pyproject.toml  requirements.txt  sidebars.js  sitemap.xml  toiminnallisuudet.md
.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  registry.js  routes.js  routesChunkNames.json  site-metadata.json
.github/workflows/: deploy.yml  gh-pages.yml
config/: sidebars.js
content/minidocs/: sidebars.js
content/projekti1/: aloitus.md  sidebars.js
docs/keskitetty_dokumentaatio/: KUVAUS.md  LEARNINGS.md
docs/projekti1/: index.md  muut.md  sidebars.js
docs/projekti2/: index.md
esimerkkiprojekti/: index.html
esimerkkiprojekti/architecture/: index.html
esimerkkiprojekti/changelog/: index.html
esimerkkiprojekti/integrations/: index.html
esimerkkiprojekti/projektinblueprint/: index.html
esimerkkiprojekti/video_demo_material/: index.html
esimerkkiprojekti/vision/: index.html
insighthub/: index.html
insighthub/ARCHITECTURE/: index.html
insighthub/CONFIG_GUIDE/: index.html
insighthub/DEVELOPER_HANDBOOK/: index.html
insighthub/GETTING_STARTED/: index.html
insighthub/INSIGHTHUB_STRATEGIC_POSITIONING/: index.html
insighthub/Learnings/: index.html
insighthub/MINDMAP_IDEAS/: index.html
insighthub/PRD_automatisoitu_työjono/: index.html
insighthub/todo/: index.html
projekti1/: index.html
projekti2/: index.html
search/: search_index.json
site/: 404.html
(+97 files in other folders)
