[project]
name = "docs"
version = "0.1.0"
description = "Centralized documentation"
authors = [
    {name = "Panu",email = "panu.alaluusua@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-awesome-pages-plugin>=2.9.1",
    "pymdown-extensions>=10.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
